# collect_logs

./: .gitignore  Cargo.toml  README.md  all_bases_list.txt  collect_logs_errors.txt  collect_logs_params.txt
src/: config.rs  main.rs  models.rs
