[package]
name = "collect_logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"
rusqlite = { version = "0.27.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
cfg-if = "1.0"
serde = {version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
reqwest = { version = "0.11", default-features = true, features = ["json", "blocking"] }


[features]
dev = []
prod = []